2005-04-19  Benoît Dejean  <TazForEver@dlfp.org>

	* src/Makefile.am:
	* src/callbacks.c: (cb_timeout):
	* src/procman.c: (timeouts_changed_cb), (procman_data_new),
	(procman_free_data):
	* src/procman.h:
	* src/smooth_refresh.c: (get_own_cpu_usage), (smooth_refresh_new),
	(smooth_refresh_reset), (smooth_refresh_destroy),
	(smooth_refresh_get):
	* src/smooth_refresh.h: Implemented smooth refresh interval.
	Closes #164296.

2005-04-19  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.c: (procman_get_tree_state): Fixed typo.

2005-04-06  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.c: (procman_get_tree_state),
	(procman_save_tree_state):
	* src/procman.h:
	Fixed against bad gconf keys.
	Marked const key args.

2005-04-05  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_about): One more const.

2005-04-05  Benoît Dejean  <TazForEver@dlfp.org>

	* src/bacon-message-connection.c: Synced with libbacon HEAD.

2005-04-05  Benoît Dejean  <TazForEver@dlfp.org>

	* src/load-graph.c: (get_memory): Fixed display if there's no swap.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-31  Benoît Dejean  <TazForEver@dlfp.org>

	* .cvsignore:
	* configure.in:
	* src/Makefile.am:
	* src/bacon-message-connection.c: (test_is_socket),
	(setup_connection), (server_cb), (socket_filename), (try_server),
	(try_client), (bacon_message_connection_new),
	(bacon_message_connection_free),
	(bacon_message_connection_set_callback),
	(bacon_message_connection_send),
	(bacon_message_connection_get_is_server):
	* src/bacon-message-connection.h: Imported libbacon.

2005-03-31  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_edit_preferences), (cb_renice),
	(cb_end_process), (cb_kill_process), (cb_show_memory_maps),
	(cb_show_open_files), (cb_show_hidden_processes),
	(cb_hide_process), (cb_about), (cb_help_contents), (cb_app_exit),
	(cb_change_current_page):
	* src/callbacks.h: