@@ -1,3 +1,12 @@
+2005-04-27  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/callbacks.c: (cb_update_disks),
+	(cb_volume_mounted_or_unmounted):
+	* src/callbacks.h:
+	* src/procman.c: (init_volume_monitor), (main): Refresh devices
+	list whenever a device is mounted or unmounted.
+	Closes #164292.
+
 2005-04-19  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/Makefile.am:
